# ArXivChatGuru

./: .env.azure.template  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: container-image.yml
app/: app.py  requirements.txt
app/assets/: diagram.excalidraw
app/pages/: Stats.py
app/qna/: __init__.py  arxiv.yaml  constants.py  data.py  db.py  llm.py  models.py  prompt.py
